fix padding on small screens

--- a/themes/zhubert/assets/css/main.css
+++ b/themes/zhubert/assets/css/main.css
@@ -9,7 +9,7 @@ body {
   line-height: 1.5;
   margin: 40px auto;
   max-width: 650px;
-  padding: 0 10px;
+  padding: 0 20px;
 }
 
 h1,h2,h3 {
